tests/ui/target-feature/forbidden-hardfloat-target-feature-attribute-f-zfinx.stderr
error: target feature `zfinx` cannot be enabled with `#[target_feature]`: this feature is incompatible with the target ABI
  --> $DIR/forbidden-hardfloat-target-feature-attribute-f-zfinx.rs:16:18
   |
LL | #[target_feature(enable = "zdinx")]
   |                  ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

